--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,2 +1,2 @@
-#login-panel{max-width:400px}.channel-selector.active{background-color:dodgerblue;color:white}
+#login-panel{max-width:400px}.channel-selector.active{background-color:dodgerblue;color:white}#content #sidenav .list-item{line-height:30px}#content #sidenav .list-item .material-icons{font-size:30px;margin-right:10px}#content md-input-container .md-errors-spacer{min-height:0}#message-bar{background-color:white}
 /*# sourceMappingURL=styles.css.map */
